--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "sanity"
   ],
   "dependencies": {
+    "@sanity/icons": "^3.4.0",
+    "@sanity/ui": "^2.8.9",
     "@sanity/vision": "^3.56.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "sanity": "^3.56.0",
+    "sanity-plugin-documents-pane": "^2.3.0",
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
